style: adding commented-out example folders to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -83,3 +83,5 @@ vignettes/*.pdf
 
 # Folders to ignore
 ## Add any folders you’d like to ignore below (with or without the trailing slash)
+# data/
+# graphs/
